--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,9 +87,85 @@ jobs:
           prerelease: false
           args: --target ${{ matrix.target }}
 
+  updater-json:
+    name: Generate Updater JSON
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download release assets and generate latest.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION="${GITHUB_REF_NAME#v}"
+          REPO="${GITHUB_REPOSITORY}"
+
+          # Wait a moment for all assets to be available
+          sleep 10
+
+          # Get release info
+          RELEASE_DATE=$(gh release view $GITHUB_REF_NAME --repo $REPO --json publishedAt -q .publishedAt)
+          RELEASE_NOTES=$(gh release view $GITHUB_REF_NAME --repo $REPO --json body -q .body)
+
+          # Download signature files
+          mkdir -p sigs
+          gh release download $GITHUB_REF_NAME --repo $REPO --pattern "*.sig" --dir sigs || true
+
+          # Read signatures
+          MACOS_AARCH64_SIG=""
+          MACOS_X64_SIG=""
+          LINUX_SIG=""
+          WINDOWS_SIG=""
+
+          if [ -f "sigs/ProxyPal_aarch64.app.tar.gz.sig" ]; then
+            MACOS_AARCH64_SIG=$(cat "sigs/ProxyPal_aarch64.app.tar.gz.sig")
+          fi
+          if [ -f "sigs/ProxyPal_x64.app.tar.gz.sig" ]; then
+            MACOS_X64_SIG=$(cat "sigs/ProxyPal_x64.app.tar.gz.sig")
+          fi
+          if [ -f "sigs/ProxyPal_${VERSION}_amd64.AppImage.sig" ]; then
+            LINUX_SIG=$(cat "sigs/ProxyPal_${VERSION}_amd64.AppImage.sig")
+          fi
+          if [ -f "sigs/ProxyPal_${VERSION}_x64-setup.nsis.zip.sig" ]; then
+            WINDOWS_SIG=$(cat "sigs/ProxyPal_${VERSION}_x64-setup.nsis.zip.sig")
+          fi
+
+          # Generate latest.json
+          cat > latest.json << EOF
+          {
+            "version": "${VERSION}",
+            "notes": "See the release notes on GitHub",
+            "pub_date": "${RELEASE_DATE}",
+            "platforms": {
+              "darwin-aarch64": {
+                "signature": "${MACOS_AARCH64_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/${GITHUB_REF_NAME}/ProxyPal_aarch64.app.tar.gz"
+              },
+              "darwin-x86_64": {
+                "signature": "${MACOS_X64_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/${GITHUB_REF_NAME}/ProxyPal_x64.app.tar.gz"
+              },
+              "linux-x86_64": {
+                "signature": "${LINUX_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/${GITHUB_REF_NAME}/ProxyPal_${VERSION}_amd64.AppImage"
+              },
+              "windows-x86_64": {
+                "signature": "${WINDOWS_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/${GITHUB_REF_NAME}/ProxyPal_${VERSION}_x64-setup.nsis.zip"
+              }
+            }
+          }
+          EOF
+
+          cat latest.json
+
+          # Upload to release
+          gh release upload $GITHUB_REF_NAME latest.json --repo $REPO --clobber
+
   notify:
     name: Discord Notification
-    needs: release
+    needs: [release, updater-json]
     runs-on: ubuntu-latest
     if: always()
     steps:
