--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "proxypal",
-	"version": "0.2.2",
+	"version": "0.3.0",
 	"description": "",
 	"type": "module",
 	"scripts": {
@@ -21,6 +21,8 @@
 		"@tauri-apps/plugin-process": "^2.3.1",
 		"@tauri-apps/plugin-updater": "^2.9.0",
 		"chart.js": "^4.5.1",
+		"echarts": "^6.0.0",
+		"solid-echarts": "^0.0.4",
 		"solid-js": "^1.9.3"
 	},
 	"devDependencies": {
